--- a/Live/.gitignore
+++ b/Live/.gitignore
@@ -7,3 +7,22 @@
 /build
 /captures
 .externalNativeBuild
+libs/
+src/main/java/com/jkkc/live/LiveApp.java
+src/main/java/com/jkkc/live/activity/
+src/main/java/com/jkkc/live/adapter/
+src/main/java/com/jkkc/live/anim/
+src/main/java/com/jkkc/live/base/
+src/main/java/com/jkkc/live/fragment/
+src/main/java/com/jkkc/live/http/
+src/main/java/com/jkkc/live/login/
+src/main/java/com/jkkc/live/model/
+src/main/java/com/jkkc/live/presenter/
+src/main/java/com/jkkc/live/service/
+src/main/java/com/jkkc/live/ui/
+src/main/java/com/jkkc/live/utils/
+src/main/res/drawable/
+src/main/res/layout/activity_login.xml
+src/main/res/layout/activity_splash.xml
+src/main/res/layout/listview_msg_item.xml
+src/main/res/mipmap-xxhdpi/splash_bg.jpg
